Update readme. Add new fonts, icons.

--- a/Portfolio/wwwroot/css/tailwind.css
+++ b/Portfolio/wwwroot/css/tailwind.css
@@ -573,6 +573,10 @@ video {
   margin-right: auto;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .flex {
   display: flex;
 }
@@ -600,4 +604,13 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.font-medium {
+  font-weight: 500;
 }
