--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -14,14 +14,22 @@
 </head>
 <body>
 
-<nav class="bg-nord0 text-nord6">
+<nav class="bg-nord0 text-nord6 font-medium mb-8">
     <div class="container mx-auto">
         <div class="flex justify-between py-4">
             <ul class="flex space-x-10">
-                <li>Home</li>
-                <li>About</li>
-                <li>Projects</li>
-                <li>Contact</li>
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="/about">About</a>
+                </li>
+                <li>
+                    <a href="/projects">Projects</a>
+                </li>
+                <li>
+                    <a href="/contact">Contact</a>
+                </li>
             </ul>
             <ul class="flex space-x-5">
                 <li>
