--- a/Portfolio/wwwroot/css/styles.css
+++ b/Portfolio/wwwroot/css/styles.css
@@ -1,3 +1,15 @@
 * {
     font-family: 'Roboto', sans-serif;
 }
+
+.font-light {
+    font-weight: 300;
+}
+
+.font-regular {
+    font-weight: 400;
+}
+
+.font-medium {
+    font-weight: 500;
+}
