Add error pages for 404, 500 specific.

--- a/Portfolio/Views/Error/Index.cshtml
+++ b/Portfolio/Views/Error/Index.cshtml
@@ -1,5 +1,6 @@
 @{
-    ViewData["Title"] = "404 - Page not found";
+    ViewData["Title"] = "Something went wrong...";
+    Layout = "_Layout";
 }
 
-<h1>404</h1>
+<p>Something went wrong... Please try again later.</p>
