Fix gitignore. Update home page icon.

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -3,9 +3,13 @@
 }
 
 <div class="text-center">
-    <h1 class="text-6xl font-medium mb-8">Hi Mom</h1>
+    <h1 class="text-6xl font-medium mb-8">Christopher Dykes</h1>
+    <h3 class="text-4xl font-medium mb-8">Software Developer</h3>
 </div>
-<p>
-    Chris was here
-</p>
-<img src="miku.png"/>
+
+<div class="flex justify-center">
+    <div class="bg-nord2 rounded-full w-64 h-64">
+        <img src="miku.png" alt="miku icon" class="my-auto w-auto h-full object-contain"/>
+    </div>
+</div>
+
