--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -13,49 +13,54 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
-<body>
 
-<nav class="bg-nord0 text-nord6 font-medium mb-8">
-    <div class="container mx-auto">
-        <div class="flex justify-between py-4">
-            <ul class="flex space-x-10">
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/about">About</a>
-                </li>
-                <li>
-                    <a href="/projects">Projects</a>
-                </li>
-                <li>
-                    <a href="/contact">Contact</a>
-                </li>
-            </ul>
-            <ul class="flex space-x-5">
-                <li>
-                    <a href="https://github.com/chris-dykes-j" target="_blank">
-                        <i class="fab fa-github fa-lg"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/christopher-dykes/" target="_blank">
-                        <i class="fab fa-linkedin fa-lg"></i>
-                    </a>
-                </li>
-            </ul>
+<body class="bg-nord-dark">
+    <nav class="bg-nord0 text-nord6 font-medium mb-8">
+        <div class="container mx-auto">
+            <div class="flex justify-between py-4">
+                <ul class="flex space-x-10">
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/about">About</a>
+                    </li>
+                    <li>
+                        <a href="/projects">Projects</a>
+                    </li>
+                    <li>
+                        <a href="/contact">Contact</a>
+                    </li>
+                </ul>
+                <ul class="flex space-x-5">
+                    <li>
+                        <a href="https://github.com/chris-dykes-j" target="_blank">
+                            <i class="fab fa-github fa-lg"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/christopher-dykes/" target="_blank">
+                            <i class="fab fa-linkedin fa-lg"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank">
+                            <i class="fas fa-moon fa-lg"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
+    </nav>
+
+    <div class="main-content text-nord6">
+        @RenderBody()
     </div>
-</nav>
+    <div id="footer">
 
-<div class="main-content">
-    @RenderBody()
-</div>
-<div id="footer">
-
-</div>
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/js/site.js" asp-append-version="true"></script>
-@await RenderSectionAsync("Scripts", required: false)
+    </div>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
