--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="text-6xl font-medium mb-8">Christopher Dykes</h1>
-    <h3 class="text-4xl font-medium mb-8">Software Developer</h3>
+    <h1 class="text-6xl title mb-4">Christopher Dykes</h1>
+    <h3 class="text-4xl sub-title mb-8">Full Stack Web Developer</h3>
 </div>
 
 <div class="flex justify-center">
