--- a/Portfolio/wwwroot/css/styles.css
+++ b/Portfolio/wwwroot/css/styles.css
@@ -13,3 +13,13 @@
 .font-medium {
     font-weight: 500;
 }
+
+.title {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500; 
+}
+
+.sub-title {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+}
