--- a/Portfolio/Views/About/Index.cshtml
+++ b/Portfolio/Views/About/Index.cshtml
@@ -3,4 +3,10 @@
     Layout = "_Layout";
 }
 
-<p>I'm great.</p>
+<div class="text-center">
+    <h1 class="text-6xl title mb-4">About Me</h1>
+</div>
+
+<div class="content">
+    
+</div>
