--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -12,3 +12,9 @@
         <img src="miku.png" alt="miku icon" class="my-auto w-auto h-full object-contain"/>
     </div>
 </div>
+
+<div class="content mt-8 flex justify-center">
+    <p class="font-regular text-2xl">
+        Hi mom!
+    </p>
+</div>
