--- a/Portfolio/Views/Project/Index.cshtml
+++ b/Portfolio/Views/Project/Index.cshtml
@@ -6,5 +6,9 @@
 }
 
 <div class="text-center">
-    <h1 class="text-6xl font-medium mb-8">Hi Dad</h1>
+    <h1 class="text-6xl title mb-4">Web Projects</h1>
+</div>
+
+<div class="content">
+    
 </div>
