--- a/Portfolio/Views/Contact/Index.cshtml
+++ b/Portfolio/Views/Contact/Index.cshtml
@@ -5,4 +5,10 @@
     Layout = "_Layout";
 }
 
-<h2>title</h2>
+<div class="text-center">
+    <h1 class="text-6xl title mb-4">Contact Information</h1>
+</div>
+
+<div class="content">
+    
+</div>
