--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -14,55 +14,58 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"> 
 </head>
 
-<body class="h-full bg-nord-dark">
-    <nav class="bg-nord0 text-nord6 font-medium mb-8">
-        <div class="container mx-auto">
-            <div class="flex justify-between py-4">
-                <ul class="flex space-x-10">
-                    <li>
-                        <a href="/">Home</a>
-                    </li>
-                    <li>
-                        <a href="/about">About</a>
-                    </li>
-                    <li>
-                        <a href="/projects">Projects</a>
-                    </li>
-                    <li>
-                        <a href="/contact">Contact</a>
-                    </li>
-                </ul>
-                <ul class="flex space-x-5">
-                    <li>
-                        <a href="https://github.com/chris-dykes-j" target="_blank">
-                            <i class="fab fa-github fa-lg"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/christopher-dykes/" target="_blank">
-                            <i class="fab fa-linkedin fa-lg"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank">
-                            <i class="fas fa-moon fa-lg"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+<body class="flex flex-col h-screen justify-between bg-nord-dark">
+
+<nav class="bg-nord0 text-nord6 font-medium mb-8 sticky">
+    <div class="container mx-auto">
+        <div class="flex justify-between py-4">
+            <ul class="flex space-x-10">
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="/about">About</a>
+                </li>
+                <li>
+                    <a href="/projects">Projects</a>
+                </li>
+                <li>
+                    <a href="/contact">Contact</a>
+                </li>
+            </ul>
+            <ul class="flex space-x-5">
+                <li>
+                    <a href="https://github.com/chris-dykes-j" target="_blank">
+                        <i class="fab fa-github fa-lg"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/christopher-dykes/" target="_blank">
+                        <i class="fab fa-linkedin fa-lg"></i>
+                    </a>
+                </li>
+                <li>
+                    <a target="_blank">
+                        <i class="fas fa-moon fa-lg"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
-    </nav>
-
-    <div class="main-content text-nord6">
-        @RenderBody()
     </div>
+</nav>
 
-    <div id="footer">
+<div class="main-content text-nord6 grow mt-0">
+    @RenderBody()
+</div>
 
+<div id="footer" class="bg-nord0 text-nord4 font-regular mt-8 py-8">
+    <div class="flex justify-center">
+        <p>&#127279; 2023 Christopher Dykes, some rights reserved</p>
     </div>
+</div>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
