Change x margin for nav.

--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 <body class="flex flex-col h-screen justify-between bg-nord-dark">
 
 <nav class="bg-nord0 text-nord6 font-medium mb-8 sticky">
-    <div class="container mx-auto px-6">
+    <div class="container mx-auto px-10">
         <div class="flex justify-between py-4">
             @* Desktop *@
             <ul class="hidden md:flex flex space-x-10">
@@ -32,7 +32,7 @@
                     <i class="fas fa-bars fa-lg"></i>
                 </button>
             </ul>
-            @* Hamburger items *@
+            @* Hamburger items *@ @*
             <div id="nav-menu" class="md:hidden">
                 <ul class="flex flex-col space-y-4">
                     <li><a href="/">Home</a></li>
@@ -40,7 +40,7 @@
                     <li><a href="/projects">Projects</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
-            </div>
+            </div> *@
             
             <ul class="flex space-x-5">
                 <li>
