Fix hamburger menu

--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -32,15 +32,16 @@
                     <i class="fas fa-bars fa-lg"></i>
                 </button>
             </ul>
-            @* Hamburger items *@ @*
-            <div id="nav-menu" class="md:hidden">
-                <ul class="flex flex-col space-y-4">
+            @* Hamburger items *@
+            <div id="nav-menu" class="sm:hidden absolute top-full left-0 w-40 bg-nord0 text-nord6 shadow-lg hidden z-50
+                rounded-br-md">
+                <ul class="flex flex-col space-y-4 p-4">
                     <li><a href="/">Home</a></li>
                     <li><a href="/about">About</a></li>
                     <li><a href="/projects">Projects</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
-            </div> *@
+            </div>
             
             <ul class="flex space-x-5">
                 <li>
