--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
 <div class="text-center">
@@ -8,13 +8,14 @@
 </div>
 
 <div class="flex justify-center">
-    <div class="bg-nord5 rounded-full w-64 h-64">
+    <div class="bg-nord5 rounded-full w-48 h-48">
         <img src="miku.png" alt="miku icon" class="my-auto w-auto h-full object-contain"/>
     </div>
 </div>
 
-<div class="content mt-8 flex justify-center">
-    <p class="font-regular text-2xl">
-        Hi mom!
+<div class="mt-8 px-5 mx-auto w-full sm:w-3/4">
+    <p class="font-regular text-xl">
+        Hi! My name is Chris. I'm a software developer from Ottawa, Canada. My primary focus is building web applications.
+        I love to tinker with technology, experiment with new and unique tools, and create useful and interesting software applications.
     </p>
 </div>
