--- a/Portfolio/wwwroot/css/tailwind.css
+++ b/Portfolio/wwwroot/css/tailwind.css
@@ -622,8 +622,8 @@ video {
   display: none;
 }
 
-.h-64 {
-  height: 16rem;
+.h-48 {
+  height: 12rem;
 }
 
 .h-full {
@@ -638,12 +638,16 @@ video {
   width: 10rem;
 }
 
-.w-64 {
-  width: 16rem;
+.w-48 {
+  width: 12rem;
 }
 
 .w-auto {
   width: auto;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .grow {
@@ -688,10 +692,6 @@ video {
   border-bottom-right-radius: 0.375rem;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
@@ -720,11 +720,6 @@ video {
   text-align: center;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -733,6 +728,11 @@ video {
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-medium {
@@ -752,6 +752,10 @@ video {
 
   .sm\:hidden {
     display: none;
+  }
+
+  .sm\:w-3\/4 {
+    width: 75%;
   }
 
   .sm\:px-10 {
