--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -13,9 +13,19 @@
     </div>
 </div>
 
-<div class="mt-8 px-5 mx-auto w-full sm:w-3/4">
-    <p class="font-regular text-xl">
-        Hi! My name is Chris. I'm a software developer from Ottawa, Canada. My primary focus is building web applications.
+<div class="mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
+    <p>
+        Hi! My name is Chris. I'm a software developer from Ottawa, Canada. My expertise is in building fast, scalable, and secure web applications.
         I love to tinker with technology, experiment with new and unique tools, and create useful and interesting software applications.
+    </p>
+    <br/>
+    <p>
+        My diverse work experiences have given me a unique blend of expertise and creativity. I have worked extensively with a wide range of programming languages and frameworks, including but not limited to 
+        C# and ASP.NET Core, Java, Go, TypeScript and React.
+        I have worked also with both relational database management systems and non-relational databases, and a variety of Linux distributions.
+    </p>
+    <br/>
+    <p>
+        If you'd like to see my work, check out the <a href="/projects" class="text-nord7">projects</a> page on this site. If you would like contact me for business inquiries, you can do so <a href="/contact" class="text-nord7">here</a>.
     </p>
 </div>
