Add link colour on hover.

--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -21,39 +21,39 @@
         <div class="flex justify-between py-4">
             @* Desktop *@
             <ul class="hidden sm:flex flex space-x-10">
-                <li><a href="/">Home</a></li>
-                <li><a href="/projects">Projects</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a href="/" class="hover:text-mint">Home</a></li>
+                <li><a href="/projects" class="hover:text-mint">Projects</a></li>
+                <li><a href="/contact" class="hover:text-mint">Contact</a></li>
             </ul>
             @* Mobile *@
             <ul class="sm:hidden flex">
                 <button id="nav-button">
-                    <i class="fas fa-bars fa-lg"></i>
+                    <i class="fas fa-bars fa-lg hover:text-mint"></i>
                 </button>
             </ul>
             @* Hamburger items *@
             <div id="nav-menu" class="sm:hidden absolute top-full left-0 w-40 bg-nord0 text-nord6 shadow-lg hidden z-50
                 rounded-br-md">
                 <ul class="flex flex-col space-y-4 p-4">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/projects">Projects</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="/" class="hover:text-mint">Home</a></li>
+                    <li><a href="/projects" class="hover:text-mint">Projects</a></li>
+                    <li><a href="/contact" class="hover:text-mint">Contact</a></li>
                 </ul>
             </div>
             
             <ul class="flex space-x-5">
                 <li>
-                    <a href="https://github.com/chris-dykes-j" target="_blank">
+                    <a href="https://github.com/chris-dykes-j" target="_blank" class="hover:text-mint">
                         <i class="fab fa-github fa-lg"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/christopher-dykes/" target="_blank">
+                    <a href="https://www.linkedin.com/in/christopher-dykes/" target="_blank" class="hover:text-mint">
                         <i class="fab fa-linkedin fa-lg"></i>
                     </a>
                 </li>
                 <li>
-                    <a target="_blank">
+                    <a target="_blank" class="hover:text-mint">
                         <i class="fas fa-moon fa-lg"></i>
                     </a>
                 </li>
