--- a/Portfolio/Views/Contact/Index.cshtml
+++ b/Portfolio/Views/Contact/Index.cshtml
@@ -6,9 +6,9 @@
 }
 
 <div class="text-center">
-    <h1 class="text-6xl title mb-4">Contact Information</h1>
+    <h1 class="text-6xl title mb-4">Contact Me</h1>
 </div>
 
-<div class="content">
+<div class="mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
     
 </div>
