--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="text-6xl title mb-4">Christopher Dykes</h1>
+    <h1 class="text-6xl title mb-4 text-mint">Christopher Dykes</h1>
     <h3 class="text-4xl sub-title mb-8">Full Stack Web Developer</h3>
 </div>
 
@@ -26,6 +26,6 @@
     </p>
     <br/>
     <p>
-        If you'd like to see my work, check out the <a href="/projects" class="text-nord7">projects</a> page on this site. If you would like contact me for business inquiries, you can do so <a href="/contact" class="text-nord7">here</a>.
+        If you'd like to see my work, check out the <a href="/projects" class="text-mint">projects</a> page on this site. If you would like contact me for business inquiries, you can do so <a href="/contact" class="text-mint">here</a>.
     </p>
 </div>
