--- a/Portfolio/wwwroot/css/tailwind.css
+++ b/Portfolio/wwwroot/css/tailwind.css
@@ -739,6 +739,11 @@ video {
   font-weight: 500;
 }
 
+.text-mint {
+  --tw-text-opacity: 1;
+  color: rgb(185 233 232 / var(--tw-text-opacity));
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -747,7 +752,7 @@ video {
 
 .hover\:text-mint:hover {
   --tw-text-opacity: 1;
-  color: rgb(143 188 187 / var(--tw-text-opacity));
+  color: rgb(185 233 232 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
