Fix navbar sticky.

--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 
 <body class="flex flex-col h-screen justify-between bg-nord-dark">
 
-<nav class="bg-nord0 text-nord6 font-medium mb-8 sticky">
+<nav class="bg-nord0 text-nord6 font-medium mb-8 sticky top-0">
     <div class="container mx-auto sm:px-10 px-5">
         <div class="flex justify-between py-4">
             @* Desktop *@
