--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
     @RenderBody()
 </div>
 
-<div id="footer" class="bg-nord0 text-nord4 font-regular mt-8 py-8">
+<div id="footer" class="bg-nord0 text-nord4 font-regular py-8">
     <div class="flex justify-center">
         <p>&#127279; 2023 Christopher Dykes, some rights reserved</p>
     </div>
