Add contact info.

--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
             <ul class="hidden sm:flex flex space-x-10">
                 <li><a href="/" class="hover:text-mint">Home</a></li>
                 <li><a href="/projects" class="hover:text-mint">Projects</a></li>
-                <li><a href="/contact" class="hover:text-mint">Contact</a></li>
+                <li><a href="#contact" class="hover:text-mint">Contact</a></li>
             </ul>
             @* Mobile *@
             <ul class="sm:hidden flex">
@@ -37,7 +37,7 @@
                 <ul class="flex flex-col space-y-4 p-4">
                     <li><a href="/" class="hover:text-mint">Home</a></li>
                     <li><a href="/projects" class="hover:text-mint">Projects</a></li>
-                    <li><a href="/contact" class="hover:text-mint">Contact</a></li>
+                    <li><a href="#contact" class="hover:text-mint">Contact</a></li>
                 </ul>
             </div>
             
