--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -57,12 +57,17 @@
     </svg>
 </div>
 
-<div id="bottom" class="bg-nord-dark pt-8 pb-8">
+<div id="bottom" class="bg-nord-dark pt-8 pb-16">
     <div class="text-center">
-        <h2 class="text-5xl title text-mint">Contact</h2>
+        <h2 id="contact" class="text-5xl title text-mint">Contact Me</h2>
     </div>
     
-    <div class="flex justify-center">
-        
+    <div class="mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
+        <p class="text-center">
+            If you'd like to make a business inquiry, shoot me an <a href="mailto:chris.dykes.j@gmail.com" class="text-mint">email</a>!
+        </p>
+        <p class="text-center">
+            Otherwise, you can find me on <a href="https://github.com/chris-dykes-j" class="text-mint">github</a> or <a href="https://www.linkedin.com/in/christopher-dykes/" class="text-mint">linkedin</a>.
+        </p>
     </div>
 </div>
