--- a/Portfolio/wwwroot/css/tailwind.css
+++ b/Portfolio/wwwroot/css/tailwind.css
@@ -584,10 +584,6 @@ video {
   top: 100%;
 }
 
-.z-10 {
-  z-index: 10;
-}
-
 .z-50 {
   z-index: 50;
 }
@@ -718,6 +714,10 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
 }
 
 .pb-8 {
