Add icons to sections. Fix links. Add projects section.

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -34,20 +34,27 @@
     </svg>
 </div>
 
-<div id="mid" class="bg-nord0 pt-8 pb-8">
+<div id="projects" class="bg-nord0 pt-16 pb-8">
     <div class="text-center">
         <h2 class="text-5xl title text-mint">Web Projects</h2>
+        <i class="fas fa-laptop-code mt-8" style="font-size: 100px !important;"></i>
     </div>
     
-    <div class="mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
-        <p>
-            I'm still working on the design here. Waves or angled lines? For now, enjoy the lorem ipsum.
-        </p>
-        <br/>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat non enim aliquam imperdiet. Sed imperdiet risus bibendum cursus eleifend. Ut massa justo, pellentesque quis diam at, euismod tincidunt justo. In suscipit at nisi et congue. Praesent lacinia sagittis justo. Suspendisse nunc lacus, vulputate vel enim id, tristique iaculis lectus. Aenean suscipit purus id leo venenatis, nec maximus elit imperdiet. In eu finibus ante. Maecenas ornare vel odio sit amet rutrum. Proin tincidunt efficitur diam ac tempor.
-            Sed tincidunt, est sit amet imperdiet hendrerit, elit velit eleifend nisl, sed venenatis nibh ligula ac mi. Quisque turpis neque, egestas eu augue a, bibendum efficitur erat. Sed sagittis eleifend ante nec tincidunt. Suspendisse sagittis, ligula in mollis cursus, nibh tellus porta nisl, dignissim hendrerit odio erat at dui. Maecenas nisi elit, convallis sed tincidunt consectetur, pellentesque at sapien. Duis sollicitudin tortor at nisi accumsan tristique. Nam ac magna cursus, rhoncus risus lobortis, sagittis felis. Mauris in lorem lacus.
-        </p>
+    <div class="flex justify-center mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
+        @* Figure Web API *@
+        <div class="project-card bg-nord1 p-10 mb-5 rounded-lg shadow-lg w-1/2"> 
+            <h3 class="text-2xl font-medium text-nord6 mb-2">Figure Web API</h3>
+            <p>
+                A Restful Web API built with C# and ASP.NET Core.
+            </p>
+            <div class="links mt-2">
+                <a href="https://api.anime-figures.moe/figure" class="text-mint">Application Link</a> | 
+                <a href="https://github.com/chris-dykes-j/figure-api" class="text-mint">Source Code</a>
+            </div>
+        </div>
+    </div>
+    <div class="mt-4 px-5 mx-auto w-full sm:w-3/4 font-regular text-3xl">
+        <p class="text-center">WIP</p>
     </div>
 </div>
 
@@ -57,12 +64,15 @@
     </svg>
 </div>
 
-<div id="bottom" class="bg-nord-dark pt-8 pb-16">
+<div id="contact" class="bg-nord-dark pt-16 pb-16">
     <div class="text-center">
-        <h2 id="contact" class="text-5xl title text-mint">Contact Me</h2>
+        <h2 class="text-5xl title text-mint">Contact Me</h2>
+        <a href="mailto:chris.dykes.j@gmail.com" class="hover:text-mint">
+            <i class="fas fa-envelope mt-4" style="font-size: 100px !important;"></i>
+        </a>
     </div>
     
-    <div class="mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
+    <div class="mt-8 mb-16 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
         <p class="text-center">
             If you'd like to make a business inquiry, shoot me an <a href="mailto:chris.dykes.j@gmail.com" class="text-mint">email</a>!
         </p>
