Attempt hover fix for mobile devices.

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -48,8 +48,8 @@
                 A Restful Web API built with C# and ASP.NET Core.
             </p>
             <div class="links mt-2">
-                <a href="https://api.anime-figures.moe/figure" class="text-mint">Application Link</a> | 
-                <a href="https://github.com/chris-dykes-j/figure-api" class="text-mint">Source Code</a>
+                <a href="https://api.anime-figures.moe/figure" class="text-mint" target="_blank">Application Link</a> | 
+                <a href="https://github.com/chris-dykes-j/figure-api" class="text-mint" target="_blank">Source Code</a>
             </div>
         </div>
     </div>
@@ -74,10 +74,10 @@
     
     <div class="mt-8 mb-16 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
         <p class="text-center">
-            If you'd like to make a business inquiry, shoot me an <a href="mailto:chris.dykes.j@gmail.com" class="text-mint">email</a>!
+            If you'd like to make a business inquiry, shoot me an <a href="mailto:chris.dykes.j@gmail.com" class="text-mint" target="_blank">email</a>!
         </p>
         <p class="text-center">
-            Otherwise, you can find me on <a href="https://github.com/chris-dykes-j" class="text-mint">github</a> or <a href="https://www.linkedin.com/in/christopher-dykes/" class="text-mint">linkedin</a>.
+            Otherwise, you can find me on <a href="https://github.com/chris-dykes-j" class="text-mint" target="_blank">github</a> or <a href="https://www.linkedin.com/in/christopher-dykes/" class="text-mint" target="_blank">linkedin</a>.
         </p>
     </div>
 </div>
