--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
 
 <div id="footer" class="bg-nord0 text-nord4 font-regular py-8">
     <div class="flex justify-center">
-        <p>&#127279; 2023 Christopher Dykes, some rights reserved</p>
+        <p>&copy; 2023 Christopher Dykes, some rights reserved</p>
     </div>
 </div>
 
