Fix project card width.

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
     
     <div class="flex justify-center mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
         @* Figure Web API *@
-        <div class="project-card bg-nord1 p-10 mb-5 rounded-lg shadow-lg w-1/2"> 
+        <div class="bg-nord1 p-10 mb-5 rounded-lg shadow-lg"> 
             <h3 class="text-2xl font-medium text-nord6 mb-2">Figure Web API</h3>
             <p>
                 A Restful Web API built with C# and ASP.NET Core.
@@ -53,6 +53,7 @@
             </div>
         </div>
     </div>
+    
     <div class="mt-4 px-5 mx-auto w-full sm:w-3/4 font-regular text-3xl">
         <p class="text-center">WIP</p>
     </div>
