Update home page

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -21,8 +21,7 @@
         </p>
         <br/>
         <p>
-            My diverse work experiences have given me a unique blend of expertise and creativity. I have worked extensively with a wide range of programming languages and frameworks, including but not limited to 
-            C# and ASP.NET Core, Java, Go, TypeScript and React.
+            I've worked extensively with a wide range of programming languages and frameworks, C# and ASP.NET Core, Java, Go, TypeScript and React.
             I have worked also with both relational database management systems and non-relational databases, and a variety of Linux distributions.
         </p>
     </div>
