Add golang project to portfolio list

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -53,8 +53,17 @@
         </div>
     </div>
     
-    <div class="mt-4 px-5 mx-auto w-full sm:w-3/4 font-regular text-3xl">
-        <p class="text-center">WIP</p>
+    <div class="flex justify-center mt-4 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
+        @* Go School Project *@
+        <div class="bg-nord1 p-10 mb-5 rounded-lg shadow-lg"> 
+            <h3 class="text-2xl font-medium text-nord6 mb-2">Golang School Project</h3>
+            <p>
+                A CRUD application built with Go and Postgres.
+            </p>
+            <div class="links mt-2">
+                <a href="https://github.com/chris-dykes-j/vegetable-go" class="text-mint" target="_blank">Source Code</a>
+            </div>
+        </div>
     </div>
 </div>
 
