Add transition animations on scroll.

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -3,18 +3,18 @@
 }
 
 <div id="top">
-    <div class="text-center">
+    <div class="text-center hide">
         <h1 class="text-6xl title mb-4 text-mint">Christopher Dykes</h1>
         <h3 class="text-4xl sub-title mb-8">Full Stack Web Developer</h3>
     </div>
 
-    <div class="flex justify-center">
+    <div class="flex justify-center hide">
         <div class="bg-nord5 rounded-full w-48 h-48">
             <img src="miku.png" alt="miku icon" class="my-auto w-auto h-full object-contain"/>
         </div>
     </div>
 
-    <div class="mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
+    <div class="mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
         <p>
             Hi! My name is Chris. I'm a software developer from Ottawa, Canada. My expertise is in building fast, scalable, and secure web applications.
             I love to tinker with technology, experiment with new and unique tools, and create useful and interesting software applications.
@@ -34,12 +34,12 @@
 </div>
 
 <div id="projects" class="bg-nord0 pt-16 pb-8">
-    <div class="text-center">
+    <div class="text-center hide">
         <h2 class="text-5xl title text-mint">Web Projects</h2>
         <i class="fas fa-laptop-code mt-8" style="font-size: 100px !important;"></i>
     </div>
     
-    <div class="flex justify-center mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
+    <div class="flex justify-center mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
         @* Figure Web API *@
         <div class="bg-nord1 p-10 mb-5 rounded-lg shadow-lg"> 
             <h3 class="text-2xl font-medium text-nord6 mb-2">Figure Web API</h3>
@@ -53,7 +53,7 @@
         </div>
     </div>
     
-    <div class="flex justify-center mt-4 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
+    <div class="flex justify-center mt-4 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
         @* Go School Project *@
         <div class="bg-nord1 p-10 mb-5 rounded-lg shadow-lg"> 
             <h3 class="text-2xl font-medium text-nord6 mb-2">Golang School Project</h3>
@@ -74,14 +74,14 @@
 </div>
 
 <div id="contact" class="bg-nord-dark pt-16 pb-16">
-    <div class="text-center">
+    <div class="text-center hide">
         <h2 class="text-5xl title text-mint">Contact Me</h2>
         <a href="mailto:chris.dykes.j@gmail.com" class="hover:text-mint">
             <i class="fas fa-envelope mt-4" style="font-size: 100px !important;"></i>
         </a>
     </div>
     
-    <div class="mt-8 mb-16 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
+    <div class="mt-8 mb-16 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
         <p class="text-center">
             If you'd like to make a business inquiry, shoot me an <a href="mailto:chris.dykes.j@gmail.com" class="text-mint" target="_blank">email</a>!
         </p>
