--- a/Portfolio/wwwroot/css/styles.css
+++ b/Portfolio/wwwroot/css/styles.css
@@ -1,3 +1,4 @@
+/* Text */
 * {
     font-family: 'Roboto', sans-serif;
 }
@@ -24,6 +25,7 @@
     font-weight: 500;
 }
 
+/* Waves */
 .wave-one {
     width: 100%;
     overflow: hidden;
@@ -59,4 +61,22 @@
 
 .wave-two .shape-fill {
     fill: var(--nord-darker);
+}
+
+/* Animations */
+.hide {
+    opacity: 0;
+    transition: all 1s;
+    transform: translateY(3%);
+}
+
+.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+@media(prefers-reduced-motion) {
+    .hide {
+        transition: none;
+    }
 }
