--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewData["Title"] - Christopher Dykes</title>
     <link rel="icon" type="image/x-icon" href="~/favicon.ico">
     <link rel="stylesheet" href="~/css/tailwind.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/css/nord.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,9 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"> 
 </head>
 
-<body class="flex flex-col h-screen justify-between bg-nord-dark">
+<body class="flex flex-col h-screen justify-between bg-nord1 dark:bg-white" >
 
-<nav class="bg-nord1 text-nord6 font-medium mb-8 sticky top-0 z-50">
+<nav class="bg-nord-dark text-nord6 font-medium mb-8 sticky top-0 z-50">
     <div class="container mx-auto sm:px-10 px-5">
         <div class="flex justify-between py-4">
             @* Desktop *@
@@ -53,7 +52,7 @@
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" class="hover:text-mint">
+                    <a class="hover:text-mint" onclick="toggleDarkMode()" style="cursor: pointer;">
                         <i class="fas fa-moon fa-lg"></i>
                     </a>
                 </li>
