--- a/Portfolio/wwwroot/css/tailwind.css
+++ b/Portfolio/wwwroot/css/tailwind.css
@@ -720,6 +720,26 @@ video {
   border-bottom-right-radius: 0.375rem;
 }
 
+.bg-nord-dark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(41 46 57 / var(--tw-bg-opacity));
+}
+
+.bg-nord0 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(46 52 64 / var(--tw-bg-opacity));
+}
+
+.bg-nord1 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 66 82 / var(--tw-bg-opacity));
+}
+
+.bg-nord5 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 233 240 / var(--tw-bg-opacity));
+}
+
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
@@ -798,6 +818,16 @@ video {
   color: rgb(185 233 232 / var(--tw-text-opacity));
 }
 
+.text-nord4 {
+  --tw-text-opacity: 1;
+  color: rgb(216 222 233 / var(--tw-text-opacity));
+}
+
+.text-nord6 {
+  --tw-text-opacity: 1;
+  color: rgb(236 239 244 / var(--tw-text-opacity));
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -807,6 +837,11 @@ video {
 .hover\:text-mint:hover {
   --tw-text-opacity: 1;
   color: rgb(185 233 232 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:bg-white) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 @media (min-width: 640px) {
