Refactor dark mode toggle for maintainability.

--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -13,9 +13,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"> 
 </head>
 
-<body class="flex flex-col h-screen justify-between bg-nord1 dark:bg-white" >
+@* The transition is a bit wonky with the colours on load. *@
+<body class="flex flex-col h-screen justify-between bg-nord-dark"> @*transition-all ease-in-out duration-700" >*@
 
-<nav class="bg-nord-dark text-nord6 font-medium mb-8 sticky top-0 z-50">
+<nav class="bg-nord-dark text-nord-0 text-nord6 font-medium mb-8 sticky top-0 z-50">
     <div class="container mx-auto sm:px-10 px-5">
         <div class="flex justify-between py-4">
             @* Desktop *@
@@ -53,7 +54,7 @@
                 </li>
                 <li>
                     <a class="hover:text-mint" onclick="toggleDarkMode()" style="cursor: pointer;">
-                        <i class="fas fa-moon fa-lg"></i>
+                        <i id="dark-mode-icon" class="fas fa-lg"></i>
                     </a>
                 </li>
             </ul>
