Attempt to fix hover for mobile devices.

--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -28,16 +28,16 @@
             @* Mobile *@
             <ul class="sm:hidden flex">
                 <button id="nav-button">
-                    <i class="fas fa-bars fa-lg hover:text-mint"></i>
+                    <i class="fas fa-bars fa-lg"></i>
                 </button>
             </ul>
             @* Hamburger items *@
             <div id="nav-menu" class="sm:hidden absolute top-full left-0 w-40 bg-nord0 text-nord6 shadow-lg hidden z-100
                 rounded-br-md">
                 <ul class="flex flex-col space-y-4 p-4">
-                    <li><a href="/" class="hover:text-mint">Home</a></li>
-                    <li><a href="/#projects" class="hover:text-mint">Projects</a></li>
-                    <li><a href="/#contact" class="hover:text-mint">Contact</a></li>
+                    <li><a href="/" class="">Home</a></li>
+                    <li><a href="/#projects" class="">Projects</a></li>
+                    <li><a href="/#contact" class="">Contact</a></li>
                 </ul>
             </div>
             
