--- a/Portfolio/wwwroot/css/styles.css
+++ b/Portfolio/wwwroot/css/styles.css
@@ -1,3 +1,10 @@
+/* For mobile devices... annoying */
+@media (hover: hover) {
+    .hover\:text-mint:hover {
+        color: #B9E9E8;
+    }
+}
+
 /* Text */
 * {
     font-family: 'Roboto', sans-serif;
