Attempt second solution to fix hover for mobile devices.

--- a/Portfolio/wwwroot/css/tailwind.css
+++ b/Portfolio/wwwroot/css/tailwind.css
@@ -856,9 +856,11 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hover\:text-mint:hover {
-  --tw-text-opacity: 1;
-  color: rgb(185 233 232 / var(--tw-text-opacity));
+@media (hover: hover) and (pointer: fine) {
+  .hover\:text-mint:hover {
+    --tw-text-opacity: 1;
+    color: rgb(185 233 232 / var(--tw-text-opacity));
+  }
 }
 
 @media (min-width: 640px) {
