Update opening bio

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -13,18 +13,25 @@
             <img src="miku.png" alt="miku icon" class="my-auto w-auto h-full object-contain"/>
         </div>
     </div>
-
+    
     <div class="mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
         <p>
-            Hi! My name is Chris. I'm a software developer from Ottawa, Canada. My expertise is in building fast, scalable, and secure web applications.
-            I love to tinker with technology, experiment with new and unique tools, and create useful and interesting software applications.
+            Hi! I'm Chris, a software developer from Ottawa, Canada.
+            My expertise is in creating full-stack web applications and backend solutions.
+            If you're in need of a secure, high-performance web application, or you're looking for a skilled developer to join your team, you've come to the right place.
         </p>
         <br/>
         <p>
-            I've worked extensively with a wide range of programming languages and frameworks, C# and ASP.NET Core, Java, Go, TypeScript and React.
-            I have worked also with both relational database management systems and non-relational databases, and a variety of Linux distributions.
+            With a proven track record in a broad array of programming languages and frameworks, including but not limited to C# and ASP.NET Core, Go, and JavaScript/TypeScript and Express.js, I bring versatility and depth to every project.
+            My expertise extends beyond code, encompassing SQL and NoSQL databases, and Linux distributions like Arch and Debian.
+        </p>
+        <br/>
+        <p>
+            I love exploring new technologies and emerging trends to ensure that the solutions I deliver take full advantage of the innovations in the tech industry.
+            If you'd like to see my skills in action, please have a look at the projects below!
         </p>
     </div>
+
 </div>
 
 <div class="wave-one">
@@ -86,7 +93,7 @@
             If you'd like to make a business inquiry, shoot me an <a href="mailto:chris.dykes.j@gmail.com" class="text-mint" target="_blank">email</a>!
         </p>
         <p class="text-center">
-            Otherwise, you can find me on <a href="https://github.com/chris-dykes-j" class="text-mint" target="_blank">github</a> or <a href="https://www.linkedin.com/in/christopher-dykes/" class="text-mint" target="_blank">linkedin</a>.
+            You can also find me on <a href="https://github.com/chris-dykes-j" class="text-mint" target="_blank">github</a> or <a href="https://www.linkedin.com/in/christopher-dykes/" class="text-mint" target="_blank">linkedin</a>.
         </p>
     </div>
 </div>
