--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="hover:text-mint" onclick="toggleDarkMode()" style="cursor: pointer;">
+                    <a onclick="toggleDarkMode()" style="cursor: pointer;" class="hover:text-mint" >
                         <i id="dark-mode-icon" class="fas fa-lg"></i>
                     </a>
                 </li>
