Update opening bio

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
         </p>
         <br/>
         <p>
-            With a proven track record in a broad array of programming languages and frameworks, including but not limited to C# and ASP.NET Core, Go, and JavaScript/TypeScript and Express.js, I bring versatility and depth to every project.
+            I bring versatility and depth to projects with my knowledge and experience with a wide array of programming languages and frameworks, including but not limited to C# and ASP.NET Core, Go, and JavaScript/TypeScript and Express.js.
             My expertise extends beyond code, encompassing SQL and NoSQL databases, and Linux distributions like Arch and Debian.
         </p>
         <br/>
